--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,8 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - openpyxl=3.1.2
+  - pandas=2.2.2
   - pip=24.0
   - pyomo=6.7.3
   - python=3.12.2
