Implement executing GAMS before comparing with LEGO implementation
Add psutil to environment.yml
Adjust .gitignore for GAMS-Output files

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ __pycache__/
 
 # GAMS-output files (for comparison)
 *.lst
-*.lxi
 LEGO*.log*
-
-# Model files and solver options
-*.mps
 *.opt
+*.log
+
+# Model files
+*.mps
