--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - openpyxl=3.1.2
   - pandas=2.2.2
   - pip=24.0
+  - psutil=6.1.0
   - pyomo=6.8.0
   - python=3.12.2
   - rich=13.7.1
