--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: Simplified-Technical-Representation_env
+name: LEGO-Pyomo_env
 channels:
   - defaults
   - conda-forge
@@ -11,3 +11,5 @@ dependencies:
   - python=3.12.2
   - rich=13.7.1
   - tabulate=0.9.0
+  - pip:
+      - pulp==2.9.0
