--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - pyomo=6.8.0
   - python=3.12.2
   - rich=13.7.1
+  - rich-argparse=1.6.0
   - tabulate=0.9.0
   - pip:
       - pulp==2.9.0
