--- a/environment.yml
+++ b/environment.yml
@@ -4,17 +4,19 @@ channels:
   - conda-forge
 dependencies:
   - matplotlib=3.10.3
-  - openmpi=4.1.3
+  - mpi4py=4.0.3
+  - openmpi=5.0.8
   - openpyxl=3.1.5
   - pandas=2.2.3
   - pip=25.1
   - psutil=7.0.0
   - pyomo=6.9.2
+  - pytest=8.4.0
   - python=3.13.2
   - rich=14.0.0
   - rich-argparse=1.7.0
   - tabulate=0.9.0
   - pip:
+      - -e InOutModule
       - pulp==3.1.1
       - mpi-sppy==0.12.1  # https://doi.org/10.1007/s12532-023-00247-3
-      - mpi4py==4.0.3
