--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,9 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - highspy=1.11.0
   - matplotlib=3.10.3
-  - mpi4py=4.0.3
-  - openmpi=5.0.8
+  - openmpi=4.1.3
   - openpyxl=3.1.5
   - pandas=2.2.3
   - pip=25.1
@@ -17,6 +17,6 @@ dependencies:
   - rich-argparse=1.7.0
   - tabulate=0.9.0
   - pip:
-      - -e InOutModule
       - pulp==3.1.1
       - mpi-sppy==0.12.1  # https://doi.org/10.1007/s12532-023-00247-3
+      - -e InOutModule
