--- a/environment.yml
+++ b/environment.yml
@@ -18,5 +18,6 @@ dependencies:
   - tabulate=0.9.0
   - pip:
       - pulp==3.1.1
+      - mpi4py==4.0.3
       - mpi-sppy==0.12.1  # https://doi.org/10.1007/s12532-023-00247-3
       - -e InOutModule  # Editable install for InOutModule (submodule of this repository)
