--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - cplex=22.1.2
+  - ibmdecisionoptimization::cplex=22.1.2
   - highspy=1.11.0
   - matplotlib=3.10.3
   - openmpi=4.1.3
@@ -14,7 +14,7 @@ dependencies:
   - psutil=7.0.0
   - pyomo=6.9.2
   - pytest=8.4.0
-  - python=3.13.2
+  - python=3.12.11
   - rich=14.0.0
   - rich-argparse=1.7.0
   - tabulate=0.9.0
