--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ ubuntu-latest, windows-latest ]  # , macos-latest ]  # Temporarily disabled macOS due to CPLEX issues (see GitHub issue #30)
         isMainBranch:
           - ${{ contains(github.ref, 'main') }}  # Check if the branch is main
         exclude:
