Add new input files for storage and vres, remove separate ror files
Add model.sqlite and model.xlsx to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,9 @@ LEGO*.log*
 # Model files
 *.mps
 
+# Standard output files for LEGO.py
+model.sqlite
+model.xlsx
+
 # Operating system files
 .DS_Store
