--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__/
 ~$*.xlsx
 scratch
 
+# Exclude data of the RINGS project
+data/rings
+
 # Development environment files
 .idea/
 .vscode/
