--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - rich-argparse=1.7.0
   - tabulate=0.9.0
   - pip:
+      - gurobipy==12.0.3
       - mpi4py==4.0.3
       - mpi-sppy==0.12.1  # https://doi.org/10.1007/s12532-023-00247-3
       - pulp==3.1.1
