--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - rich=14.0.0
   - rich-argparse=1.7.0
   - tabulate=0.9.0
+  - tsam=2.3.9
   - pip:
       - gurobipy==12.0.3
       - mpi4py==4.0.3
