--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - rich=14.0.0
   - rich-argparse=1.7.0
   - tabulate=0.9.0
+  - tsam=2.3.9
   - pip:
       - mpi4py==4.0.3
       - mpi-sppy==0.12.1  # https://doi.org/10.1007/s12532-023-00247-3
